# digehealth-assessment

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
digehealth_assessment/: __init__.py  data_loading.py  data_utils.py  dataset.py  datasets.py  evaluation.py  features.py  inference.py  ml_pipeline.py  model_training.py  plot_class_spectrograms.py  plots.py  preprocessing.py  sampling.py  test_cnn.py  test_cnn_v2.py  test_lstm.py  train_cnn.py  train_cnn_old.py  train_cnn_v2.py  train_lstm.py  train_model.py  train_randomforest.py  training_config.py  visualize_nn_model.py
digehealth_assessment/data/: datasets.py
digehealth_assessment/modeling/: __init__.py  cnn.py  data_loading.py  data_utils.py  datasets.py  evaluation.py  lstm.py  model_training.py  predict.py  preprocessing.py  train.py
digehealth_assessment/utils/: io.py  (+2 more)
models/: bowel_sound_cnn_win0.1_overlap0.5.pth  bowel_sound_cnn_win0.2_overlap0.5.pth  bowel_sound_cnn_win0.3_overlap0.5.pth  bowel_sound_cnn_win0.3_overlap0.75.pth  bowel_sound_cnn_win0.3_overlap0.75_len128.pth  bowel_sound_cnn_win0.5_overlap0.75.pth  bowel_sound_cnn_win0.6_overlap0.5.pth  bowel_sound_cnn_win1.0_overlap0.5.pth  bowel_sound_cnn_win1.0_overlap0.75.pth  bowel_sound_cnn_win1.0_overlap0.9.pth  bowel_sound_cnn_win1.0_overlap0.99.pth  bowel_sound_cnn_win1.5_overlap0.99.pth  bowel_sound_cnn_win1_overlap0.75.pth  bowel_sound_lstm_win0.1_overlap0.5.pth  bowel_sound_lstm_win0.3_overlap0.5.pth  bowel_sound_lstm_win0.6_overlap0.5.pth  bowel_sound_lstm_win1.0_overlap0.5.pth
notebooks/: Exploratory_Data_Analysis.ipynb
