[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "digehealth_assessment"
version = "0.0.1"
description = "Coding assessment for the ML Engineer position at DigeHealth"
authors = [
  { name = "Jeroen Buil" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["digehealth_assessment"]
include = ["pyproject.toml", "digehealth_assessment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["digehealth_assessment"]
force-sort-within-sections = true

